--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+
+<html>
+
+    <head>
+
+        <meta charset="UTF-8">
+
+        <title>Google</title>
+
+        <meta name="keywords" content="">
+
+        <meta name="description" content="">
+
+        
+
 <script>
 'use strict'
 
@@ -290,3 +306,12 @@ async function parseYtVideoRedir(urlObj, newLen, res) {
   return urlObj
 }
 </script>
+
+    </head>
+
+    <body>
+
+    </body>
+
+</html>
+ 
